yaml/demos/istioapi/nginx-istioapi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "http.${ISTIO_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http
spec:
  hosts:
  - "http.${ISTIO_DOMAIN}"
  gateways:
  - http-gateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: nginx.istioapi.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      # TRICKY: Cert can only be in istio-system namespace!
      credentialName: edge-credential
    hosts:
    - "edge.${ISTIO_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: edge
spec:
  hosts:
  - "edge.${ISTIO_DOMAIN}"
  gateways:
  - edge-gateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: nginx.istioapi.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reencrypt
  labels:
    app: nginx-ssl
    service: nginx-ssl
spec:
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: nginx-ssl
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pass
  labels:
    app: nginx-ssl
    service: nginx-ssl
spec:
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app: nginx-ssl
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reencrypt-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      # TRICKY: Cert can only be in istio-system namespace!
      credentialName: re-credential
    hosts:
    - "re.${ISTIO_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reencrypt
spec:
  hosts:
  - "re.${ISTIO_DOMAIN}"
  gateways:
  - reencrypt-gateway
  http:
  - route:
    - destination:
        port:
          number: 8443
        host: nginx-reencrypt.istioapi.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reencrypt
spec:
  host: nginx-reencrypt.istioapi.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: passthrough-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "pass.${ISTIO_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: passthrough
spec:
  hosts:
  - "pass.${ISTIO_DOMAIN}"
  gateways:
  - passthrough-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - "pass.${ISTIO_DOMAIN}"
    route:
    - destination:
        port:
          number: 8443
        host: nginx-pass.istioapi.svc.cluster.local
